--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/vue3": "^1.0.2",
+        "lodash": "^4.17.21",
         "nprogress": "^0.2.0",
         "vue": "^3.2.36"
     }
